--- a/.github/workflows/test-terraform.yaml
+++ b/.github/workflows/test-terraform.yaml
@@ -14,7 +14,7 @@ jobs:
     - run: nix-build
     - run: which terraform
     # - run: nix-env -i terraform_0_14 # fails
-    - run: nix-env -iA terraform_0_14
+    # - run: nix-env -iA terraform_0_14 # fails
     - run: nix-env -i nixpkgs.terraform_0_14
     - run: tree "$NIX_PATH"
     - run: ls /nix/var/nix/profiles
