--- a/.github/workflows/test-terraform.yaml
+++ b/.github/workflows/test-terraform.yaml
@@ -12,10 +12,12 @@ jobs:
         nix_path: nixpkgs=channel:nixos-unstable
     - run: which terraform
     - run: nix-build
-    - run: which terraform
+    - run: echo $PATH
+    # - run: which terraform
     # - run: nix-env -i terraform_0_14 # fails
     # - run: nix-env -iA terraform_0_14 # fails
-    - run: nix-env -i nixpkgs.terraform_0_14
+    # - run: nix-env -i nixpkgs.terraform_0_14 # fails
+    - run: nix-env -iA nixpkgs.terraform_0_14 # fails
     - run: tree "$NIX_PATH"
     - run: ls /nix/var/nix/profiles
     - run: ls -hAl ~/
