--- a/.github/workflows/test-terraform.yaml
+++ b/.github/workflows/test-terraform.yaml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/checkout@v2.3.4
     - uses: cachix/install-nix-action@v13
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
+        nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/8e4fe32876ca15e3d5eb3ecd3ca0b224417f5f17.tar.gz
     - run: nix-env -if default.nix
