--- a/.github/workflows/test-terraform.yaml
+++ b/.github/workflows/test-terraform.yaml
@@ -11,3 +11,10 @@ jobs:
       with:
         nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/8e4fe32876ca15e3d5eb3ecd3ca0b224417f5f17.tar.gz
     - run: nix-env -if default.nix
+    - run: terraform init terraform/
+    - run:
+        terraform plan \
+          -var 'auth_server_clientkey="fjkdsalfjdskal3784291732841"' \
+          -var 'auth_server_clientsecret="kfsdlja_327418kalfjdksalh_789"' \
+          terraform/
+
