--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,6 +12,11 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
+    - name: Assert package.json version matches release tag
+      if: ${{ github.event_name == 'release' }}
+      run: |-
+        PACKAGE_VER="v$(jq -r '.version' package.json)"
+        [[ "$PACKAGE_VER" == "$GITHUB_REF" ]]
     -
       name: Docker meta
       id: docker_meta
