--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-      name: Assert package.json version matches release tag
+    - name: Assert package.json version matches release tag
       if: ${{ github.event_name == 'release' }}
       run: |-
         PACKAGE_VER="v$(jq -r '.version' package.json)"
