--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,8 @@ jobs:
       if: ${{ github.event_name == 'release' }}
       run: |-
         PACKAGE_VER="v$(jq -r '.version' package.json)"
+        echo "$PACKAGE_VER"
+        echo "$GITHUB_REF"
         [[ "$PACKAGE_VER" == "$GITHUB_REF" ]]
     -
       name: Docker meta
