--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
         PACKAGE_VER="v$(jq -r '.version' package.json)"
         echo "$PACKAGE_VER"
         echo "$GITHUB_REF"
-        [[ "$PACKAGE_VER" == "$GITHUB_REF" ]]
+        [[ "refs/tags/$PACKAGE_VER" == "$GITHUB_REF" ]]
     -
       name: Docker meta
       id: docker_meta
